refactor(frontend): update UI text to be more professional
- Change main title to "Network Analysis Toolkit"
- Remove tagline

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,8 +9,7 @@
 </head>
 <body>
     <div id="app">
-        <h1>Mtronaut - Network Analysis Web Interface</h1>
-        <p class="tagline">Crafted with ❤️ by FadenB, for all your network analysis adventures!</p>
+        <h1>Network Analysis Toolkit</h1>
         <div class="controls">
             <select id="tool-select">
                 <option value="ping">ping</option>
