--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,6 +6,7 @@
     <title>Mtronaut</title>
     <link rel="stylesheet" href="/static/css/styles.css">
     <link rel="stylesheet" href="https://unpkg.com/xterm@5.3.0/css/xterm.css">
+    <link rel="stylesheet" href="/static/css/notifications.css">
 </head>
 <body>
     <div id="app">
@@ -33,6 +34,7 @@
 
     <script src="https://unpkg.com/xterm@5.3.0/lib/xterm.js"></script>
     <script src="https://unpkg.com/xterm-addon-fit@0.8.0/lib/xterm-addon-fit.js"></script>
+    <script src="/static/js/notifications.js"></script>
     <script src="/static/js/websocket.js"></script>
     <script src="/static/js/terminal.js"></script>
     <script src="/static/js/tools.js"></script>
